# RuleOPE

./: .gitignore  LICENSE  NEURIPS_RESULT.md  NEURIPS_RESULTS_FULL.md  NOTICE  README.md  STRONG_ACCEPT_DELTA.md  neurips_proposal.md  neurips_v2_plan.md  novelty.md  pyproject.toml  results.md  run_experiments.md
eval/: FROZEN.md  MANIFEST.json  baseline_summary.json  benchmark_v1.jsonl  benchmark_v1_with_cf.jsonl  build_benchmark.py  correction_logs_noise_00.jsonl  correction_logs_noise_10.jsonl  correction_logs_noise_30.jsonl  ground_truth_rule_values.json  rules_v1.jsonl
experiments/: a3_validation.py  a5_bridge_validation.py  ablation_unified.py  ablations.py  analysis_2wiki_selector.py  analysis_2wiki_sigma_R2.py  analysis_middle_band_audit.py  analysis_qwen14b_selector.py  analysis_qwen32b_selector.py  build_2wiki_prompts.py  build_hotpot_prompts_multi.py  build_musique_prompts.py  build_noreplay_prompts.py  build_nq_prompts.py  build_trivia_prompts.py  case_study.py  crrm_experiment.py  efficiency_validation.py  failure_modes.py  hotpot_real_data.py  hotpot_with_judge.py  identification_gap.py  make_figures.py  multi_estimator_n_sweep.py  musique_scaling.py  noreplay_ope.py  noreplay_ope_noisy.py  noreplay_ope_retq.py  noreplay_scaling.py  noreplay_stochastic.py  p15_a_iv.py  p15_b_ensemble.py  p15_c_conformal.py  p15_d_minimax.py  p15_e_active.py  p15_f_transductive.py  p15_g_fdr.py  p15_h_meta_bridge.py  p15_i_diffrule.py  p15_j_scm.py  (+18 more)
paper/: BUILD_README.md  README.md  build.sh  main.tex
scripts/: analyze_full36_pairs.py  build_figures.py  full_loocv.py  (+4 more)
(+206 files in other folders)
