[project]
name = "rule-ope"
version = "1.0.0"
description = "Conditional Ranking of Off-Policy Evaluators in Retrieval-Augmented Generation"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nihal Gunukula", email = "nihalgunukula@gmail.com" },
]
maintainers = [
    { name = "Nihal Gunukula", email = "nihalgunukula@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "rank_bm25>=0.2",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
